@@ -1,3 +1,9 @@
+Wed Jun 23 21:17:32 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/raddrinfo.c (ruby_getaddrinfo__darwin): new workaround for
+	  getaddrinfo problem on Mac OS X Snow Leopard.  [ruby-core:29427]
+	  patch by Wataru Kimura.  [ruby-core:30842]
+
 Wed Jun 23 06:44:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (fchown): need to check.  a patch by Eric Wong
